--- a/login/login.html
+++ b/login/login.html
@@ -12,6 +12,11 @@
         <div class="signin">
             <div class="cont">
                 <h3>Sign In</h3>
+                <input type="email" placeholder="Email" required>
+                <input type="text" placeholder="Password" required>
+                <button type="submit" class="submitp">Sign In</button>
+                <button type="submit" class="forgotp">Forgot Password</button>
+                <p>This page is protected by Google reCAPTCHA to ensure you're not a bot</p>
             </div>
         </div>
     </div>
